reestructuracion de carpetas
Separacion de templates, controllers, services.

--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
     <!-- APP SCRIPTS-->
     <script src="app/app.js"></script>
-    <script src="app/components/home/homeController.js"></script>
-    <script src="app/components/todo/todoController.js"></script>
-    <script src="app/components/settings/settingsController.js"></script>
-    <script src="app/components/new/newController.js"></script>
+    <script src="app/controllers/homeCtrl.js"></script>
+    <script src="app/controllers/todoCtrl.js"></script>
+    <script src="app/controllers/settingsCtrl.js"></script>
+    <script src="app/controllers/newCtrl.js"></script>
 
 </body>
 </html>
