Implementacion de services etc.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <script src="app/controllers/todoCtrl.js"></script>
     <script src="app/controllers/settingsCtrl.js"></script>
     <script src="app/controllers/newCtrl.js"></script>
+    <script src="app/services/usersFactory.js"></script>
+    <script src="app/services/streamFactory.js"></script>
 
 </body>
 </html>
