--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     <script src="app/controllers/newCtrl.js"></script>
     <script src="app/services/usersFactory.js"></script>
     <script src="app/services/streamFactory.js"></script>
+    <script src="app/services/postFactory.js"></script>
 
 </body>
 </html>
