--- a/index.html
+++ b/index.html
@@ -83,8 +83,10 @@
     <script src="app/controllers/homeCtrl.js"></script>
     <script src="app/controllers/todoCtrl.js"></script>
     <script src="app/controllers/settingsCtrl.js"></script>
+    <script src="app/controllers/loginCtrl.js"></script>
     <script src="app/controllers/newCtrl.js"></script>
     <script src="app/services/usersFactory.js"></script>
+    <script src="app/services/loginFactory.js"></script>
     <script src="app/services/streamFactory.js"></script>
     <script src="app/services/postFactory.js"></script>
 
