--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
 
   <!-- NAV BAR -->
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top" ng-controller="LoginController">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
           <span class="icon-bar"></span>
@@ -38,6 +38,10 @@
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#/todo"><i class="mdi-editor-border-color"></i> To do!</a></li>
             <li><a href="#/settings"><i class="mdi-action-settings"></i></a></li>
+            <li><button 
+                              type="submit" 
+                              class="btn btn-primary btn-fab btn-raised mdi-action-exit-to-app" 
+                              ng-click="logout()"></button></li>
         </ul>
 
       </div>
@@ -82,6 +86,7 @@
     <script src="app/app.js"></script>
     <script src="app/controllers/homeCtrl.js"></script>
     <script src="app/controllers/todoCtrl.js"></script>
+    <script src="app/controllers/logoutCtrl.js"></script>
     <script src="app/controllers/settingsCtrl.js"></script>
     <script src="app/controllers/loginCtrl.js"></script>
     <script src="app/controllers/newCtrl.js"></script>
