--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br />
     <br />
 
-    <div ng-view></div> <!-- DINAMIC LOADED VIEW -->
+    <div ui-view></div> <!-- DINAMIC LOADED VIEW -->
 
     <footer>
         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
@@ -81,6 +81,9 @@
     <!-- ANGULARJS -->
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+
+    <!-- UI-Router -->
+    <script src="assets/js/angular-ui-router.js"></script>
 
     <!-- APP SCRIPTS-->
     <script src="app/app.js"></script>
