--- a/index.html
+++ b/index.html
@@ -1,102 +1,84 @@
 <!doctype html>
 <html ng-app="socialApp" class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>app :) </title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- custom css -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <!-- BOOTSTRAP -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- FONT AWESOME -->
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- BOOTSTRAP MATEIRAL -->
-    <link href="assets/bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
-    <link href="assets/bower_components/bootstrap-material-design/dist/css/material-wfont.min.css" rel="stylesheet">
-    
-  </head>
-  <body>
+<head>
+   <meta charset="utf-8">
+   <title>app :) </title>
+   <meta name="description" content="">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- NAV BAR -->
-    <div class="navbar navbar-default navbar-fixed-top" ng-controller="LoginController">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#/"><i class="mdi-action-favorite-outline"></i> hello</a>
-      </div>
-      <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav nav-pills">
-          <li class="active"><a href="#/"><i class="mdi-action-home"></i> Home</a></li>
-          <li><a href="#/new"><i class="mdi-communication-live-help"></i> New <span class="badge">3</span></a></li>
-        </ul>
+   <!-- custom css -->
+   <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+   <!-- BOOTSTRAP -->
+   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+   <!-- FONT AWESOME -->
+   <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+   <!-- BOOTSTRAP MATEIRAL -->
+   <link href="assets/bower_components/bootstrap-material-design/dist/css/ripples.min.css" rel="stylesheet">
+   <link href="assets/bower_components/bootstrap-material-design/dist/css/material-wfont.min.css" rel="stylesheet">
 
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#/todo"><i class="mdi-editor-border-color"></i> To do!</a></li>
-            <li><a href="#/settings"><i class="mdi-action-settings"></i></a></li>
-            <li><button 
-                              type="submit" 
-                              class="btn btn-primary btn-fab btn-raised mdi-action-exit-to-app" 
-                              ng-click="logout()"></button></li>
-        </ul>
+</head>
 
-      </div>
-    </div>
-    <!-- .NAV BAR -->
+<body>
 
-    <div class="content"> <!-- content -->
+   <!-- NAV BAR -->
+   <div ui-view="navbar"></div>
 
-    <br />
-    <br />
-    <br />
 
-    <div ui-view></div> <!-- DINAMIC LOADED VIEW -->
+   <div class="content">
+      <!-- content -->
 
-    <footer>
-        <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-            <p class="navbar-text pull-right">by <a class="autor" href="http://gillchristian.com" target="_blank">gillchristian</a></p>           
-        </nav>
-    </footer>
+      <br />
+      <br />
+      <br />
 
-    </div><!-- .content -->
+      <div ui-view="content"></div>
+      <!-- DINAMIC LOADED VIEW -->
 
-    <!-- FRAMEWORKS -->
+      <footer>
+         <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+            <p class="navbar-text pull-right">by <a class="autor" href="http://gillchristian.com" target="_blank">gillchristian</a>
+            </p>
+         </nav>
+      </footer>
 
-    <!-- jQUERY -->
-    <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <!-- BOOTSTRAP -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <!-- BOOTSTRAP MATEIRAL -->
-    <script src="assets/bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
-    <script src="assets/bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
-    <script>
-        $(document).ready(function() {
-            $.material.init();
-        });
-    </script>
-    <!-- ANGULARJS -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+   </div>
+   <!-- .content -->
 
-    <!-- UI-Router -->
-    <script src="assets/js/angular-ui-router.js"></script>
+   <!-- FRAMEWORKS -->
 
-    <!-- APP SCRIPTS-->
-    <script src="app/app.js"></script>
-    <script src="app/controllers/homeCtrl.js"></script>
-    <script src="app/controllers/todoCtrl.js"></script>
-    <script src="app/controllers/logoutCtrl.js"></script>
-    <script src="app/controllers/settingsCtrl.js"></script>
-    <script src="app/controllers/loginCtrl.js"></script>
-    <script src="app/controllers/newCtrl.js"></script>
-    <script src="app/services/usersFactory.js"></script>
-    <script src="app/services/loginFactory.js"></script>
-    <script src="app/services/streamFactory.js"></script>
-    <script src="app/services/postFactory.js"></script>
+   <!-- jQUERY -->
+   <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+   <!-- BOOTSTRAP -->
+   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+   <!-- BOOTSTRAP MATEIRAL -->
+   <script src="assets/bower_components/bootstrap-material-design/dist/js/ripples.min.js"></script>
+   <script src="assets/bower_components/bootstrap-material-design/dist/js/material.min.js"></script>
+   <script>
+      $(document).ready(function() {
+         $.material.init();
+      });
+   </script>
+   <!-- ANGULARJS -->
+   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.min.js"></script>
+
+   <!-- UI-Router -->
+   <script src="assets/js/angular-ui-router.js"></script>
+
+   <!-- APP SCRIPTS-->
+   <script src="app/app.js"></script>
+   <script src="app/controllers/homeCtrl.js"></script>
+   <script src="app/controllers/todoCtrl.js"></script>
+   <script src="app/controllers/logoutCtrl.js"></script>
+   <script src="app/controllers/settingsCtrl.js"></script>
+   <script src="app/controllers/loginCtrl.js"></script>
+   <script src="app/controllers/newCtrl.js"></script>
+   <script src="app/services/usersFactory.js"></script>
+   <script src="app/services/loginFactory.js"></script>
+   <script src="app/services/streamFactory.js"></script>
+   <script src="app/services/postFactory.js"></script>
 
 </body>
+
 </html>
