--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
 
    <!-- APP SCRIPTS-->
    <script src="app/app.js"></script>
+   <!-- Controllers -->
    <script src="app/controllers/homeCtrl.js"></script>
    <script src="app/controllers/todoCtrl.js"></script>
    <script src="app/controllers/logoutCtrl.js"></script>
    <script src="app/controllers/settingsCtrl.js"></script>
+   <script src="app/controllers/navbarCtrl.js"></script>
    <script src="app/controllers/loginCtrl.js"></script>
    <script src="app/controllers/newCtrl.js"></script>
+   <!-- Services -->
    <script src="app/services/usersFactory.js"></script>
    <script src="app/services/loginFactory.js"></script>
    <script src="app/services/streamFactory.js"></script>
