cambio fachero en el footer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <footer>
          <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
-            <p class="navbar-text pull-right">by <a class="autor" href="http://gillchristian.com" target="_blank">gillchristian</a>
+            <p class="navbar-text pull-right">by <a class="autor" href="http://gillchristian.com" target="_blank">gillchristian</a> & la alta ayuda de nico
             </p>
          </nav>
       </footer>
